working up to the previous point

--- a/views/index.pug
+++ b/views/index.pug
@@ -7,22 +7,25 @@ block content
 				div(class="task")
 					div(class="task_text")
 						h1 #{task.name}
+						h2 #{task.position}
 						form(class="delete_task" action="/deleteTask" method="post") 
-							input(type="hidden" name=task value=task)
+							input(type="hidden" name="task_id" value=task._id)
 							input(type="submit" value="X")
 
 					for child in task.children
 						div(class="child")
 							p #{child.name}
 							form(class="delete_child" action="/deleteSubTask" method="post")
-								input(type="hidden" name="child" value= child.position)
+								input(type="hidden" name="child" value= child)
 								input(type="hidden" name="parent" value= task._id)
 								input(type="submit" value="X")
 					form(class="add_child" action="/addSubTask" method="post")
-						input(type="text" name="child")
-						input(type="hidden" name="parent" value=task)
+						input(type="text" name="name")
+						input(type="text" name="description")
+						input(type="hidden" name="parent" value=task._id)
 						input(type="submit" value="Add")
 			form(class="add_task" action="/addTask" method="post")
-				input(type="text" name="task")
+				input(type="text" name="name")
+				input(type="text" name="description")
 				input(type="submit" value="Add")
 
