--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,11 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    a(href="/") Home
+    if locals.user
+      a(href="/user") Profile
+      a(href="/logout") Log Out
+    else
+      a(href="/login") Log In
+
     block content
